--- a/app/src/main/res/layout/single_recycler_layout.xml
+++ b/app/src/main/res/layout/single_recycler_layout.xml
@@ -4,4 +4,5 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:overScrollMode="never"
     app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
