--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -14,6 +14,7 @@
             android:id="@+id/character_image_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             tools:src="@android:drawable/btn_star"/>
 
         <TextView
@@ -40,7 +41,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/comics_height"
             android:layout_below="@+id/description_text_view"/>
 
         <include
